src/scss/main.scss
/* ... */
@media only screen and (max-width: 1024px) {
  header .banner-text h1 {
    font: 80px/1.1em "Montserrat", sans-serif;
    font-weight: bold;
    letter-spacing: -1px;
    margin: 0 auto 12px auto;
  }
}

//// Primary Nav
#nav-wrap {
  font: 12px "Montserrat", sans-serif;
  width: 100%;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 2.5px;
  margin: 0 auto;
  z-index: 100;
  position: fixed;
  left: 0;
  top: 0;
  background: rgba(49, 46, 65, 0);
  transition: all 0.3s ease-in-out;
  //// Adds background after scrolling w/ some JS
  &.scroll {
    background: rgba(33, 30, 50, 0.858);
  }

  li,
  a {
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
  }
}

ul#nav {
  min-height: 48px;
  width: auto;
  margin: 0;
  transition: all 0.4s ease-in-out;
  text-align: center;

  li {
    position: relative;
    list-style: none;
    display: inline-block;

    a {
      display: inline-block;
      padding: 8px 13px;
      line-height: 32px;
      text-decoration: none;
      text-align: left;
      color: #fff;
      transition: color 0.2s ease-in-out;

      &:hover {
        color: $coral;
      }
      &.resume:hover {
        color: $aqua;
      }
      &:active {
        background-color: transparent !important;
      }
    }
    &.current a {
      color: $coral;
    }
  }
}

////////////// About Section

#about {
  background-color: $purple;
  padding-top: 40px;
  padding-bottom: 66px;
  position: relative;

  .row .three.columns {
    margin-top: -80px;
  }
  &:after {
    content: "";
    position: absolute;
    top: 90.5%;
    left: 0;
    right: 0;
    margin: 0 auto;
    border-radius: 40px;
    width: 0;
    height: 0;
    border-top: solid 50px $purple;
    border-left: solid 15px transparent;
    border-right: solid 285px transparent;
    transform: rotate(180deg);
  }

  h2 {
    font: 22px/30px "Montserrat", sans-serif;
    color: #fff;
    font-weight: bold;
    margin-bottom: 12px;
  }

  h3 {
    color: $coral;
    font: 22px/30px "Montserrat", sans-serif;
  }

  h4 {
    color: #44a69d;
    font-family: "Montserrat", sans-serif;
    font-size: 15px;
    text-transform: uppercase;
  }

  p {
    line-height: 30px;
    font-size: 1.2em;
    color: #cdcdcd;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
    &.small {
      font-size: 1em;
    }
  }

  .address {
    line-height: 20px;
    margin-bottom: 5px;

    p {
      font-size: 15px;
    }
  }
  .contact-details {
    font-size: 0.8em;
  }
  .profile-pic {
    position: relative;
    max-width: 100%;
    max-height: 100%;
    border-radius: 100%;
    border: 6px solid darken($purple, 5%);
    box-shadow: 0 0 0 12px $purple;
  }
  a {
    padding: 0px 5px 3px;
    color: white;
    border-bottom: 1px dotted $aqua;
    line-height: 20px;
    text-shadow: none;
    transition: all 0.3s ease-in-out;
    &:nth-of-type(2) {
      margin-left: 10px;
    }
    span {
      padding-right: 5px;
    }
    &:hover {
      border-bottom: none;
    }
  }
  .download {
    width: 50%;
    padding: 20px;

    .button {
      border: 2px solid $aqua;
      background-color: darken($purple, 6%);
      color: white;
      background-image: linear-gradient(
        to right,
        $aqua,
        $aqua 51%,
        $purple 49%
      );
      background-size: 200% 100%;
      background-position: 100%;
      cursor: pointer;
      padding: 15px 30px;
      border: 2px solid $aqua;
      transition: all 0.3s cubic-bezier(0, 0, 0.23, 1);

      &:hover {
        background-position: 0%;
        color: $purple;
      }
      svg {
        margin-right: 7px;
        margin-bottom: -3px;
        font-size: 16px;
      }
    }
  }
  .main-col {
    padding-right: 5%;
  }
}

#about a,
#about a:visited {
  color: #fff;
  font: 1em/1.8em "Montserrat", sans-serif;
  font-weight: 600;
}
#about a:hover,
#about a:focus {
  color: $aqua;
  background-position: 0%;
}
/* ... */

